[gd_scene load_steps=3 format=3 uid="uid://dnoohil5qop8u"]

[ext_resource type="PackedScene" path="res://Error_Label.tscn" id="1"]
[ext_resource type="Script" path="res://Admin/Create_Lobby_Screen.gd" id="2"]

[node name="Create_Lobby_Screen" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("2")

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Create Lobby"

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Edit_List_Button" type="Button" parent="HBoxContainer2"]
layout_mode = 2
text = "Edit List"

[node name="Label" type="Label" parent="HBoxContainer2"]
layout_mode = 2
text = "List-size: "

[node name="List_Size_Label" type="Label" parent="HBoxContainer2"]
layout_mode = 2
text = "0"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Grid-Size"

[node name="Grid_Size" type="SpinBox" parent="HBoxContainer"]
layout_mode = 2
min_value = 1.0
value = 4.0

[node name="HBoxContainer4" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer4"]
layout_mode = 2
text = "Port (TCP/UDP)"

[node name="Port_Line_Edit" type="LineEdit" parent="HBoxContainer4"]
layout_mode = 2
text = "37256"

[node name="HBoxContainer3" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="OK_Button" type="Button" parent="HBoxContainer3"]
layout_mode = 2
text = "OK"

[node name="Cancel_Button" type="Button" parent="HBoxContainer3"]
layout_mode = 2
text = "Cancel"

[node name="Error_Label" parent="." instance=ExtResource("1")]
layout_mode = 2

[connection signal="pressed" from="HBoxContainer2/Edit_List_Button" to="." method="_on_Edit_List_Button_pressed"]
[connection signal="pressed" from="HBoxContainer3/OK_Button" to="." method="_on_OK_Button_pressed"]
[connection signal="pressed" from="HBoxContainer3/Cancel_Button" to="." method="_on_Cancel_Button_pressed"]
